Modified to exclude name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Devarsh</strong> Karekal Umashankar</a>
+									<a href="index.html" class="logo"><strong>First Name</strong> Last Name</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Home</span></a></li>
@@ -40,7 +40,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Devarsh<br /></h1>
+											<h1>Hi, I’m AllNonsense<br /></h1>
 											<p>A free and fully responsive site template</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
